<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Wanted</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="item_name">Item</string>
    <string name="item_quantity">Quantity</string>
    <string name="item_size">Size</string>
    <string name="item_note">Notes</string>

    <string name="add_item">Add Item</string>
    <string name="add_list">Add List</string>
    <string name="delete">Delete</string>

    <string name="item_name_hint">Item</string>
    <string name="item_notes_hint">Notes</string>
    <string name="item_quantity_hint">Quantity</string>
    <string name="item_size_hint">Size</string>

    <string name="list_listname_hint">New List Name</string>

    <string name="save">Save</string>
    <string name="cancel">Cancel</string>

</resources>
