<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Spinner
        android:id="@+id/listSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/item_name_hint">

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/quantityEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/item_quantity_hint" />

    <EditText
        android:id="@+id/sizeEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/item_size_hint" />

    <EditText
        android:id="@+id/notesEditText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="top"
        android:hint="@string/item_notes_hint" />


</LinearLayout>